--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Michael Müller"
   avatar           : "profile.png"
   bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  location         : "Darmstadt,Hessen Germany"
   employer         :
   pubmed           : 
   googlescholar    : 
