--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,8 @@ main:
   - title: "CV"
     url: /cv/
     
+   - title: "Kerbal"
+    url: https://mylonikos.github.io/mylon.github.io/tags/#category1  
+    
  # - title: "Guide"
  #   url: /markdown/
