--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,12 @@ main:
    - title: "Kerbal"
     url: https://mylonikos.github.io/mylon.github.io/tags/#category1  
     
+   - title: "Operations Management"
+    url: https://mylonikos.github.io/mylon.github.io/tags/#category1  
+    
+   - title: "Produktmanagement"
+    url: https://mylonikos.github.io/mylon.github.io/tags/#category1  
+    
+    
  # - title: "Guide"
  #   url: /markdown/
