--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,14 +19,8 @@ main:
     url: /cv/
     
    - title: "Kerbal"
-    url: "https://mylonikos.github.io/mylon.github.io/tags/#category1" 
-    
-   - title: "Operations Management"
-    url: "https://mylonikos.github.io/mylon.github.io/tags/#category1"  
-    
-   - title: "Produktmanagement"
-    url: "https://mylonikos.github.io/mylon.github.io/tags/#category1"  
-    
+    url: /categories/ 
+   
     
  # - title: "Guide"
  #   url: /markdown/
