--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "de-DE"
+locale                   : "en-EN"
 title                    : "Astronautica - Meine Reise zum Data Scientist"
 title_separator          : "-"
 name                     : &name "Michael Müller"
