--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -48,46 +48,66 @@ en-GB:
 en-AU:
   <<: *DEFAULT_EN
 
-# German (default)
-# -----------------
+# German / Deutsch
+# ----------------
 de: &DEFAULT_DE
+  skip_links                 :
+  skip_primary_nav           :
+  skip_content               :
+  skip_footer                :
   page                       : "Seite"
-  pagination_previous        : "Vorheriger Beitrag"
-  pagination_next            : "Nächster Beitrag"
-  breadcrumb_home_label      : "Home"
+  pagination_previous        : "Vorherige"
+  pagination_next            : "Nächste"
+  breadcrumb_home_label      : "Start"
   breadcrumb_separator       : "/"
-  toc_label                  : "On This Page"
-  ext_link_label             : "Direct Link"
-  less_than                  : "Lesezeit:"
-  minute_read                : "."
-  share_on_label             : "Teile auf"
+  menu_label                 : "Menü ein-/ausschalten"
+  search_label               :
+  toc_label                  : "Auf dieser Seite"
+  ext_link_label             : "Direkter Link"
+  less_than                  : "weniger als"
+  minute_read                : "Minuten zum lesen"
+  share_on_label             : "Teilen auf"
   meta_label                 :
   tags_label                 : "Tags:"
   categories_label           : "Kategorien:"
-  date_label                 : "Veröffentlicht am:"
-  comments_label             : "Leave a Comment"
-  comments_title             : "Comments"
-  more_label                 : "Learn More"
-  related_label              : "You May Also Enjoy"
-  follow_label               : "Follow:"
+  date_label                 : "Aktualisiert:"
+  comments_label             : "Hinterlassen Sie einen Kommentar"
+  comments_title             : "Kommentare"
+  more_label                 : "Mehr anzeigen"
+  related_label              : "Ihnen gefällt vielleicht auch"
+  follow_label               : "Folgen:"
   feed_label                 : "Feed"
-  powered_by                 : "Powered by"
+  powered_by                 : "Möglich durch"
   website_label              : "Webseite"
-  email_label                : "Email"
-  recent_posts               : "Recent Posts"
-  undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
-  comment_form_info          : "Your email address will not be published. Required fields are marked"
-  comment_form_comment_label : "Comment"
-  comment_form_md_info       : "Markdown is supported."
+  email_label                : "E-Mail"
+  recent_posts               : "Aktuelle Beiträge"
+  undefined_wpm              : "Undefinierter Parameter words_per_minute in _config.yml"
+  comment_form_info          : "Ihre E-Mail Adresse wird nicht veröffentlicht. Benötigte Felder sind markiert"
+  comment_form_comment_label : "Kommentar"
+  comment_form_md_info       : "Markdown wird unterstützt."
   comment_form_name_label    : "Name"
-  comment_form_email_label   : "Email address"
-  comment_form_website_label : "Website (optional)"
-  comment_btn_submit         : "Submit Comment"
-  comment_btn_submitted      : "Submitted"
-  comment_success_msg        : "Thanks for your comment! It will show on the site once it has been approved."
-  comment_error_msg          : "Sorry, there was an error with your submission. Please make sure all required fields have been completed and try again."
-  loading_label              : "Loading..."
+  comment_form_email_label   : "E-Mail-Addresse"
+  comment_form_website_label : "Webseite (optional)"
+  comment_btn_submit         : "Kommentar absenden"
+  comment_btn_submitted      : "Versendet"
+  comment_success_msg        : "Danke für Ihren Kommentar! Er wird auf der Seite angezeigt, nachdem er geprüft wurde."
+  comment_error_msg          : "Entschuldigung, es gab einen Fehler. Bitte füllen Sie alle benötigten Felder aus und versuchen Sie es erneut."
+  loading_label              : "Lade..."
+  search_label_text          :
+  search_placeholder_text    : "Suchbegriff eingeben..."
+  search_algolia_no_results  :
+  results_found              : "Ergebnis(se) gefunden"
 de-DE:
+  <<: *DEFAULT_DE
+de-AT:
+  <<: *DEFAULT_DE
+de-CH:
+  <<: *DEFAULT_DE
+de-BE:
+  <<: *DEFAULT_DE
+de-LI:
+  <<: *DEFAULT_DE
+de-LU:
   <<: *DEFAULT_DE
 
 
