--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Michael Müller"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "business economist, learning data science"
   location         : "Darmstadt, Hessen, Germany"
   employer         :
   pubmed           : 
