--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "de-DE"
-title                    : "Astronautica - Meine Reise zum Data Scientist"
+title                    : "Astronautica"
 title_separator          : "-"
 name                     : &name "Michael Müller"
 description              : &description "Meine Reise zum Data Scientist"
