--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Astronautica"
 title_separator          : "-"
 name                     : &name "Michael Müller"
 description              : &description "Meine Reise zum Data Scientist"
-url                      : https://mylonikos.github.io/mylon.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://micmullr.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "mylonikos/mylon.github.io/mylon.github.io"
+repository               : "micmullr.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
