--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Astronautica"
 title_separator          : "-"
 name                     : &name "Michael Müller"
 description              : &description "Meine Reise zum Data Scientist"
-url                      : "https://micmullr.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://micmullr.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "micmullr/micmullr.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
