--- a/_config.yml
+++ b/_config.yml
@@ -96,10 +96,10 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "mylonikos"
+  github           : "micmullr"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "micmullr"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "data_mi"
+  twitter          : "micmullr"
   vine             :
   weibo            :
   xing             :
